--- a/.github/workflows/frontend-ci.yaml
+++ b/.github/workflows/frontend-ci.yaml
@@ -10,9 +10,6 @@ jobs:
   lint-job:
     name: Linting
     runs-on: ubuntu-latest   # Use the latest Ubuntu runner
-    defaults:
-      run:
-        working-directory: frontend
 
     steps:
       # Check out the code to the runner
@@ -65,7 +62,7 @@ jobs:
         run: npm install
 
       - name: Run test
-        run: CI=true npm run test
+        run: npm run test
 
   build:
     needs: [lint-job, test-job]
@@ -96,6 +93,6 @@ jobs:
         run: npm install
 
       - name: Run test
-        run: CI=true npm run test
+        run: npm run test
 
       
